--- a/Budget_Rad.ipynb
+++ b/Budget_Rad.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "[5 rows x 96 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "[2 rows x 97 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
        "[10373 rows x 2 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,18 +543,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def import_func(df: pd.DataFrame()) -> None:\n",
-    "    df.to_sql('Budget_Rad', conn, if_exists='append', index=False)\n",
-    "    \n",
-    "import_func(df_result)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -562,34 +550,101 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>FiscalYear</th>\n",
+       "      <th>BusinessUnitId</th>\n",
+       "      <th>AccountNo</th>\n",
+       "      <th>Amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>FY21</td>\n",
+       "      <td>4999</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>FY21</td>\n",
+       "      <td>4999</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Id FiscalYear  BusinessUnitId  AccountNo  Amount\n",
+       "0   1       FY21            4999      50000     0.0\n",
+       "1   2       FY21            4999      50000     0.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = raw.copy()\n",
     "df.columns = df.columns.str.replace(\" \", \"\")\n",
     "df = df.reset_index(drop=True)\n",
     "df[\"Id\"] = df.index + 1\n",
     "df = df.rename(columns={'BudgetId': 'FiscalYear', 'AccountNo.': 'AccountNo'})\n",
-    "df = df[[\"Id\", \"FiscalYear\", \"BusinessUnitId\", \"AccountNo\", \"Amount\"]]"
+    "df = df[[\"Id\", \"FiscalYear\", \"BusinessUnitId\", \"AccountNo\", \"Amount\"]]\n",
+    "df['Amount'] = df['Amount'].str.replace(',', '').fillna(0).astype(float)\n",
+    "df.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def import_func(df: pd.DataFrame()) -> None:\n",
-    "    df.to_sql('Budget', conn, if_exists='append', index=False)\n",
-    "    \n",
-    "# import_func(df)"
+    "def import_func(df: pd.DataFrame(), table: str, conn: sqlite3.Connection) -> None:\n",
+    "    try:\n",
+    "        cursor = conn.cursor()\n",
+    "        cursor.execute(f'DELETE FROM {table}')\n",
+    "        conn.commit()\n",
+    "        df.to_sql(table, conn, if_exists='append', index=False)\n",
+    "    except Exception as error:\n",
+    "        print(error)\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "\n",
+    "table = \"Budget\"\n",
+    "import_func(df, table, conn)\n"
    ]
   },
   {
